# proxy

./: .dockerignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  routes.py  schemas.py  settings.py
app/services/: __init__.py  llm_client.py  metrics.py  shadow.py
app/utils/: json_extract.py
tests/: test_json_extract.py  test_metrics.py  test_proxy_route.py  test_shadow.py
